# Robotics-Project

./: README.md
src/aos_ros_middleware_auto/: CMakeLists.txt  package.xml
src/aos_ros_middleware_auto/scripts/: aos_ros_middleware_auto_node.py
src/collectValuableToys/: environment.json  navigate glue.json  navigate.json  pick glue.json  pick.json  place glue.json  place.json
src/task3_env/scripts/: skills_client.py  skills_server.py
