<?xml version="1.0"?>
<package format="2">
  <name>aos_ros_middleware_auto</name>
  <version>0.0.0</version>
  <description>The aos_ros_middleware_auto package</description>

  <maintainer email="or@todo.todo">or</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
<build_depend>task3_env</build_depend>
<exec_depend>task3_env</exec_depend>

 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> 
  <exec_depend>roscpp</exec_depend> 
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend> 
<exec_depend>message_runtime</exec_depend>


  <export>

  </export>
</package>